@@ -3,9 +3,14 @@ package org.example.secureshare.service;
 import org.example.secureshare.model.File;
 import org.example.secureshare.model.User;
 import org.example.secureshare.payload.fiteDTO.FetchFileResponse;
+import org.example.secureshare.payload.fiteDTO.FetchFilesResponse;
 import org.example.secureshare.repository.FileRepository;
 import org.example.secureshare.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -91,9 +96,11 @@ public class FileService {
     }
 
     @Transactional(readOnly = true)
-    public List<FetchFileResponse> getAllFilesForUser(String keyword, String username) {
+    public FetchFilesResponse getAllFilesForUser(String keyword, String username, Integer pageNumber, Integer pageSize, String sortBy, String sortOrder) {
         User user = userRepository.findByUsername(username)
                 .orElseThrow(() -> new NoSuchElementException("User not found: " + username));
+
+        Pageable pageable = getPageable(pageNumber, pageSize, sortBy, sortOrder);
 
         // Start with the base specification that filters by the owner's ID.
         Specification<File> spec = (root, query, cb) -> cb.equal(root.get("owner").get("userId"), user.getUserId());
@@ -111,16 +118,23 @@ public class FileService {
         }
 
         // Pass the final, combined specification to the repository.
-        List<File> files = fileRepository.findAll(spec);
-
-        return files.stream()
+        Page<File> files = fileRepository.findAll(spec, pageable);
+        FetchFilesResponse response = new FetchFilesResponse();
+        List<FetchFileResponse> fetchFileResponses = files.stream()
                 .map(file -> new FetchFileResponse(
                         file.getId(),
                         file.getFilename(),
                         file.getDescription(),
                         file.getCategory()
                 ))
-                .collect(Collectors.toList());
+                .toList();
+        response.setFetchFiles(fetchFileResponses);
+        response.setPageNumber(files.getNumber() + 1);
+        response.setPageSize(files.getSize());
+        response.setTotalElements(files.getTotalElements());
+        response.setTotalPages(files.getTotalPages());
+        response.setLastPage(files.isLast());
+        return response;
     }
 
     @Transactional
@@ -172,5 +186,11 @@ public class FileService {
         } catch (Exception e) {
             throw new RuntimeException("Failed to share file due to a cryptographic error.", e);
         }
+    }
+
+    private Pageable getPageable(Integer pageNumber, Integer pageSize, String sortBy, String sortOrder) {
+        Sort sortByAndOrder = sortOrder.equalsIgnoreCase("asc") ? Sort.by(Sort.Direction.ASC, sortBy) : Sort.by(Sort.Direction.DESC, sortBy);
+        Pageable pageable = PageRequest.of(pageNumber -1, pageSize,sortByAndOrder);
+        return pageable;
     }
 }
