@@ -4,10 +4,15 @@ import org.example.secureshare.model.File;
 import org.example.secureshare.model.SharedFile;
 import org.example.secureshare.model.User;
 import org.example.secureshare.payload.sharedfileDTO.SharedFileResponse;
+import org.example.secureshare.payload.sharedfileDTO.SharedFilesResponse;
 import org.example.secureshare.repository.FileRepository;
 import org.example.secureshare.repository.SharedFileRepository;
 import org.example.secureshare.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -54,12 +59,13 @@ public class SharedFileService {
     }
 
     @Transactional(readOnly = true)
-    public List<SharedFileResponse> getFilesSharedByMe(String keyword, String sensitive, String username) {
+    public SharedFilesResponse getFilesSharedByMe(Integer pageNumber, Integer pageSize, String sortBy, String sortOrder, String keyword, String sensitive, String username) {
         User user = userRepository.findByUsername(username)
                 .orElseThrow(() -> new NoSuchElementException("User not found: " + username));
 
         // The base specification is a crucial filter for the logged-in user's ID.
         Specification<SharedFile> spec = (root, query, cb) -> cb.equal(root.get("sender").get("userId"), user.getUserId());
+        Pageable pageable = getPageable(pageNumber, pageSize, sortBy, sortOrder);
 
         if (sensitive != null) {
             spec = spec.and((root, query, cb) -> cb.equal(root.get("isSensitive"), sensitive));
@@ -77,9 +83,11 @@ public class SharedFileService {
             spec = spec.and(keywordSpec);
         }
 
-        List<SharedFile> logs = sharedFileRepository.findAll(spec);
+        Page<SharedFile> logs = sharedFileRepository.findAll(spec, pageable);
 
-        return logs.stream()
+
+        SharedFilesResponse response = new SharedFilesResponse();
+        List<SharedFileResponse> sharedFileResponse = logs.stream()
                 .map(log -> new SharedFileResponse(
                         log.getSender().getUsername(),
                         log.getRecipient().getUsername(),
@@ -88,13 +96,21 @@ public class SharedFileService {
                         log.getIsSensitive(),
                         log.getSharedAt()
                 ))
-                .collect(Collectors.toList());
+                .toList();
+        response.setSharedFiles(sharedFileResponse);
+        response.setPageNumber(logs.getNumber() + 1); // Pages are 0
+        response.setPageSize(logs.getSize());
+        response.setTotalElements(logs.getTotalElements());
+        response.setTotalPages(logs.getTotalPages());
+        response.setLastPage(logs.isLast());
+        return response;
     }
 
     @Transactional(readOnly = true)
-    public List<SharedFileResponse> getFilesSharedToMe(String keyword, String sensitive, String username) {
+    public SharedFilesResponse getFilesSharedToMe(Integer pageNumber, Integer pageSize, String sortBy, String sortOrder, String keyword, String sensitive, String username) {
         User user = userRepository.findByUsername(username)
                 .orElseThrow(() -> new NoSuchElementException("User not found: " + username));
+        Pageable pageable = getPageable(pageNumber, pageSize, sortBy, sortOrder);
 
         // The base specification filters for the authenticated user as the recipient.
         Specification<SharedFile> spec = (root, query, cb) -> cb.equal(root.get("recipient").get("userId"), user.getUserId());
@@ -115,9 +131,10 @@ public class SharedFileService {
             spec = spec.and(keywordSpec);
         }
 
-        List<SharedFile> logs = sharedFileRepository.findAll(spec);
+        Page<SharedFile> logs = sharedFileRepository.findAll(spec, pageable);
 
-        return logs.stream()
+        SharedFilesResponse response = new SharedFilesResponse();
+        List<SharedFileResponse> sharedFileResponse = logs.stream()
                 .map(log -> new SharedFileResponse(
                         log.getSender().getUsername(),
                         log.getRecipient().getUsername(),
@@ -126,6 +143,19 @@ public class SharedFileService {
                         log.getIsSensitive(),
                         log.getSharedAt()
                 ))
-                .collect(Collectors.toList());
+                .toList();
+        response.setSharedFiles(sharedFileResponse);
+        response.setPageNumber(logs.getNumber() + 1); // Pages are 0
+        response.setPageSize(logs.getSize());
+        response.setTotalElements(logs.getTotalElements());
+        response.setTotalPages(logs.getTotalPages());
+        response.setLastPage(logs.isLast());
+        return response;
+    }
+
+    private Pageable getPageable(Integer pageNumber, Integer pageSize, String sortBy, String sortOrder) {
+        Sort sortByAndOrder = sortOrder.equalsIgnoreCase("asc") ? Sort.by(Sort.Direction.ASC, sortBy) : Sort.by(Sort.Direction.DESC, sortBy);
+        Pageable pageable = PageRequest.of(pageNumber -1, pageSize,sortByAndOrder);
+        return pageable;
     }
 }
